<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HangMan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="newGameBtn">New Game</string>
    <string name="newGameBtnHint">Start a new game</string>
    <string name="aboutBtn">About Hangman Style</string>
    <string name="aboutBtnHint">Learn more about Hangman Style</string>
    <string name="success">Continue</string>
    <string name="failure">Try again!</string>
    <string name="handman_desc">Hangman!</string>
    <string name="menu_settings">Settings</string>
    <string name="input_hint">Click here</string>
    <string name="wins">You have won</string>
    <string name="and">time(s) and hung</string>
    <string name="losses">stick(s)</string>
    <string name="wordWas">The correct word was</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="aboutViewHeader">About the Boring Hangman</string>
    <string name="aboutText">         TwinApps!</string>
 

</resources>