<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/game_bg"
        android:orientation="vertical"
        tools:context=".GameView" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6711318348099993/7131905160"></com.google.android.gms.ads.AdView>
        <!--"ca-app-pub-6711318348099993/2754796015"-->

        <RelativeLayout
            android:id="@+id/wordAndCounterWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/hangmanImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/handman_desc" />

            <TextView
                android:id="@+id/counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50sp"
                android:layout_toRightOf="@+id/hangmanImage"
                android:paddingTop="0sp"
                android:textSize="75sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="50sp" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/a"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/a" >
                </Button>

                <Button
                    android:id="@+id/b"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/b" >
                </Button>

                <Button
                    android:id="@+id/c"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/c" >
                </Button>

                <Button
                    android:id="@+id/d"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/d" >
                </Button>

                <Button
                    android:id="@+id/e"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/e" >
                </Button>

                <Button
                    android:id="@+id/f"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/f" >
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/g"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/g" >
                </Button>

                <Button
                    android:id="@+id/h"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/h" >
                </Button>

                <Button
                    android:id="@+id/i"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/i" >
                </Button>

                <Button
                    android:id="@+id/j"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/j" >
                </Button>

                <Button
                    android:id="@+id/k"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/k" >
                </Button>

                <Button
                    android:id="@+id/l"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/l" >
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/m"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/m" >
                </Button>

                <Button
                    android:id="@+id/n"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/n" >
                </Button>

                <Button
                    android:id="@+id/o"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/o" >
                </Button>

                <Button
                    android:id="@+id/p"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/p" >
                </Button>

                <Button
                    android:id="@+id/q"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/q" >
                </Button>

                <Button
                    android:id="@+id/r"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/r" >
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/s"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/s" >
                </Button>

                <Button
                    android:id="@+id/t"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/t" >
                </Button>

                <Button
                    android:id="@+id/u"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/u" >
                </Button>

                <Button
                    android:id="@+id/v"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/v" >
                </Button>

                <Button
                    android:id="@+id/w"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/w" >
                </Button>

                <Button
                    android:id="@+id/x"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/x" >
                </Button>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/y"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/y" >
                </Button>

                <Button
                    android:id="@+id/z"
                    style="@style/blue_button"
                    android:layout_margin="2dp"
                    android:onClick="onLetterClick"
                    android:text="@string/z" >
                </Button>
            </TableRow>
        </TableLayout>

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_hint"
            android:visibility="gone" >
        </EditText>
    </LinearLayout>

</ScrollView>